--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "typescript": "^3.5.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\""
   },
@@ -38,8 +38,10 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.1",
+    "customize-cra": "^0.7.0",
     "electron": "^5.0.6",
     "electron-builder": "^20.44.4",
+    "react-app-rewired": "^2.1.3",
     "wait-on": "^3.2.0"
   }
 }
